@@ -4,6 +4,7 @@ top: document H option -- thanks Tony Ernst
 top: terabytes -- thanks Tony Ernst
 ps: SCHED_BATCH is B
 ps: fix s format (signals) output with thread display
+watch: avoid integer overflow for the time delay
 
 procps-3.2.5 --> procps-3.2.6
 
